<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#041EAC"
    tools:context=".UI.UI.CourseList" >

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="285dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="saveTerm"
        android:text="@string/save"
        android:textColor="#FFEB3B"
        app:layout_constraintBottom_toTopOf="@+id/courserecyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="343dp"
        android:layout_height="180dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/term_title"
                    android:textColor="#FFEB3B" />

                <EditText
                    android:id="@+id/editTextTermTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Term 1"
                    android:textColor="#FFEB3B"
                    android:textColorHint="#3F51B5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTermStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/term_start_date"
                    android:textColor="#FFEB3B" />

                <EditText
                    android:id="@+id/editTextTermStartDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="08/02/21"
                    android:textColor="#FFEB3B"
                    android:textColorHint="#3F51B5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTermEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/term_end_date"
                    android:textColor="#FFEB3B" />

                <EditText
                    android:id="@+id/editTextTermEndDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="08/02/22"
                    android:textColor="#FFEB3B"
                    android:textColorHint="#3F51B5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/courserecyclerview"
        android:layout_width="356dp"
        android:layout_height="296dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="76dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:onClick="enterAssessments"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        app:backgroundTint="#C3B00B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_launcher_add_foreground"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>